--- a/factions.html
+++ b/factions.html
@@ -97,44 +97,45 @@
     </h1>
     <main>
     <aside>
-            <a href="factions.html#avari">Avari</a><br>
-            <a href="factions.html#beornings">Beornings</a><br>
-            <a href="factions.html#dale">Dale</a><br>
-            <a href="factions.html#dol_guldur">Dol Guldur</a><br>
-            <a href="factions.html#dorwinion">Dorwinion</a><br>
-            <a href="factions.html#dunland">Dunland</a><br>
-            <a href="factions.html#durins">Durins Folk</a><br>
-            <a href="factions.html#ered_luin">Ered Luin Dwarves</a><br>
-            <a href="factions.html#eregion">Eregion</a><br>
-            <a href="factions.html#fangorn">Fangorn</a><br>
-            <a href="factions.html#harad_gulf">Gulf of Harad</a><br>
-            <a href="factions.html#gundamar">Gundamar</a><br>
-            <a href="factions.html#half_trolls">Half-Trolls</a><br>
-            <a href="factions.html#harnedor">Harnedor</a><br>
-            <a href="factions.html#hobbits">Hobbits</a><br>
-            <a href="factions.html#isengard">Isengard</a><br>
-            <a href="factions.html#khand">Khand</a><br>
-            <a href="factions.html#lindon">Lindon</a><br>
-            <a href="factions.html#lothlorien">Lothlórien</a><br>
-            <a href="factions.html#mordor">Mordor</a><br>
-            <a href="factions.html#morwaith">Morwaith</a><br>
-            <a href="factions.html#nomads">Nomads</a><br>
-            <a href="factions.html#orocarni">Orocarni Dwarves</a><br>
-            <a href="factions.html#reunited_kingdom">Reunited Kingdom</a><br>
-            <a href="factions.html#rhudaur">Rhudaur</a><br>
-            <a href="factions.html#rhudel">Rhudel</a><br>
-            <a href="factions.html#rivendell">Rivendell</a><br>
-            <a href="factions.html#rohan">Rohan</a><br>
-            <a href="factions.html#southron_coast">Southron Coast</a><br>
-            <a href="factions.html#taurethrim">Taurethrim</a><br>
-            <a href="factions.html#umbar">Umbar</a><br>
-            <a href="factions.html#corsairs">Corsairs of the Coast</a><br>
-            <a href="factions.html#woodelves">Woodland Realm</a><br>
-            <a href="factions.html#woodmen">Woodmen</a><br>
-            <a href="factions.html#bangad">Bangad Minhiriath</a><br>
-            <a href="factions.html#haradmnts">Harad Mountains</a><br>
-            <a href="factions.html#waegmundig">Waegmundig</a><br>
-            <a href="factions.html#wanderer">Wanderer</a><br>
+    	<a href="factions.html#avari">Avari</a><br>
+        <a href="factions.html#bangad">Bangad Minhiriath</a><br>
+        <a href="factions.html#beornings">Beornings</a><br>
+	<a href="factions.html#bree">Bree</a><br>
+        <a href="factions.html#dale">Dale</a><br>
+        <a href="factions.html#dol_guldur">Dol Guldur</a><br>
+        <a href="factions.html#dorwinion">Dorwinion</a><br>
+        <a href="factions.html#dunland">Dunland</a><br>
+        <a href="factions.html#durins">Durins Folk</a><br>
+        <a href="factions.html#ered_luin">Ered Luin Dwarves</a><br>
+        <a href="factions.html#eregion">Eregion</a><br>
+        <a href="factions.html#fangorn">Fangorn</a><br>
+        <a href="factions.html#harad_gulf">Gulf of Harad</a><br>
+        <a href="factions.html#gundamar">Gundamar</a><br>
+        <a href="factions.html#half_trolls">Half-Trolls</a><br>
+        <a href="factions.html#haradmnts">Harad Mountains</a><br>
+        <a href="factions.html#harnedor">Harnedor</a><br>
+        <a href="factions.html#hobbits">Hobbits</a><br>
+        <a href="factions.html#isengard">Isengard</a><br>
+        <a href="factions.html#khand">Khand</a><br>
+        <a href="factions.html#lindon">Lindon</a><br>
+        <a href="factions.html#lothlorien">Lothlórien</a><br>
+        <a href="factions.html#mordor">Mordor</a><br>
+        <a href="factions.html#morwaith">Morwaith</a><br>
+        <a href="factions.html#nomads">Nomads</a><br>
+        <a href="factions.html#orocarni">Orocarni Dwarves</a><br>
+        <a href="factions.html#reunited_kingdom">Reunited Kingdom</a><br>
+        <a href="factions.html#rhudaur">Rhudaur</a><br>
+        <a href="factions.html#rhudel">Rhudel</a><br>
+        <a href="factions.html#rivendell">Rivendell</a><br>
+        <a href="factions.html#rohan">Rohan</a><br>
+        <a href="factions.html#southron_coast">Southron Coast</a><br>
+        <a href="factions.html#taurethrim">Taurethrim</a><br>
+        <a href="factions.html#umbar">Umbar</a><br>
+        <a href="factions.html#corsairs">Corsairs of the Coast</a><br>
+        <a href="factions.html#waegmundig">Waegmundig</a><br>
+        <a href="factions.html#wanderer">Wanderer</a><br>
+        <a href="factions.html#woodelves">Woodland Realm</a><br>
+        <a href="factions.html#woodmen">Woodmen</a><br>
     </aside>
    <div class="block">
         <article id="avari">
@@ -149,7 +150,10 @@
         <article id="bangad">
             <h4 class="headlinearticles"> Bangad Minhiriath </h4>
             <p>
-                Bangad Minhiriath
+                "Bangad-Minhiriath are the true traders of Middle-Earth.<br>
+		Translating to "Traders Between the Seas", the merchants live as a neutral faction and travel out from their capital of Esgaroth and explore the lands trading with all races.<br>.<br>
+		The city of Sammar Erui is also under the watch of Merchant-King Glupe.<br>
+		If you're looking to make some money and a name for yourself join Bangad-Minhiriath today!" - glupe1, Founder and Faction Leader of Bangad Minhiriath<br>
             </p>
         </article>
         <p class="between">
