--- a/factions.html
+++ b/factions.html
@@ -151,7 +151,8 @@
             <h4 class="headlinearticles"> Bangad Minhiriath </h4>
             <p>
                 "Bangad-Minhiriath are the true traders of Middle-Earth.<br>
-		Translating to "Traders Between the Seas", the merchants live as a neutral faction and travel out from their capital of Esgaroth and explore the lands trading with all races.<br>.<br>
+		Translating to "Traders Between the Seas", the merchants live as a neutral faction and travel out from their capital of Esgaroth<br>
+		and explore the lands trading with all races.<br>.<br>
 		The city of Sammar Erui is also under the watch of Merchant-King Glupe.<br>
 		If you're looking to make some money and a name for yourself join Bangad-Minhiriath today!" - glupe1, Founder and Faction Leader of Bangad Minhiriath<br>
             </p>
