updated the faction navi

--- a/rules.html
+++ b/rules.html
@@ -38,19 +38,22 @@
                             <a href="factions.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
-                            <a href="factions.html#avari">Avari</a>
+			    <a href="factions.html#avari">Avari</a>
+                            <a href="factions.html#bangad">Bangad Minhiriath</a>
                             <a href="factions.html#beornings">Beornings</a>
+			    <a href="factions.html#bree">Bree</a>
                             <a href="factions.html#dale">Dale</a>
-                            <a href="factions.html#dol_guldur">Dol_Guldur</a>
+                            <a href="factions.html#dol_guldur">Dol Guldur</a>
                             <a href="factions.html#dorwinion">Dorwinion</a>
                             <a href="factions.html#dunland">Dunland</a>
-                            <a href="factions.html#durins">Durins_Folk</a>
-                            <a href="factions.html#ered_luin">Ered_Luin_Dwarves</a>
+                            <a href="factions.html#durins">Durins Folk</a>
+                            <a href="factions.html#ered_luin">Ered Luin Dwarves</a>
                             <a href="factions.html#eregion">Eregion</a>
                             <a href="factions.html#fangorn">Fangorn</a>
-                            <a href="factions.html#harad_gulf">Gulf_of_Harad</a>
+                            <a href="factions.html#harad_gulf">Gulf of Harad</a>
                             <a href="factions.html#gundamar">Gundamar</a>
-                            <a href="factions.html#half_trolls">Half Trolls</a>
+                            <a href="factions.html#half_trolls">Half-Trolls</a>
+                            <a href="factions.html#haradmnts">Harad Mountains</a>
                             <a href="factions.html#harnedor">Harnedor</a>
                             <a href="factions.html#hobbits">Hobbits</a>
                             <a href="factions.html#isengard">Isengard</a>
@@ -60,22 +63,20 @@
                             <a href="factions.html#mordor">Mordor</a>
                             <a href="factions.html#morwaith">Morwaith</a>
                             <a href="factions.html#nomads">Nomads</a>
-                            <a href="factions.html#orocarni">Orocarni_Dwarves</a>
-                            <a href="factions.html#reunited_kingdom">Reunited_Kingdom</a>
+                            <a href="factions.html#orocarni">Orocarni Dwarves</a>
+                            <a href="factions.html#reunited_kingdom">Reunited Kingdom</a>
                             <a href="factions.html#rhudaur">Rhudaur</a>
                             <a href="factions.html#rhudel">Rhudel</a>
                             <a href="factions.html#rivendell">Rivendell</a>
                             <a href="factions.html#rohan">Rohan</a>
-                            <a href="factions.html#southron_coast">Southron_Coast</a>
+                            <a href="factions.html#southron_coast">Southron Coast</a>
                             <a href="factions.html#taurethrim">Taurethrim</a>
                             <a href="factions.html#umbar">Umbar</a>
-                            <a href="factions.html#corsairs">Corsairs_of_the_Coast</a>
-                            <a href="factions.html#woodelves">Woodland_Realm</a>
-                            <a href="factions.html#woodmen">Woodmen</a>
-                            <a href="factions.html#bangad">Bangad Minhiriath</a>
-                            <a href="factions.html#haradmnts">Harad_Mountains</a>
+                            <a href="factions.html#corsairs">Corsairs of the Coast</a>
                             <a href="factions.html#waegmundig">Waegmundig</a>
                             <a href="factions.html#wanderer">Wanderer</a>
+                            <a href="factions.html#woodelves">Woodland Realm</a>
+                            <a href="factions.html#woodmen">Woodmen</a>
                         </div>
                     </div>
                     <div class="dropheadline">
