added the div with class Sidenav for hover sidenav
this is a test in hope of it to work

--- a/rules.html
+++ b/rules.html
@@ -95,7 +95,18 @@
             <br>
         </header>
         <main>
-        <aside>
+	<div id="Sidenav" class="Sidenav">
+	    <a href="rules.html#explanation">Explanation</a><br>
+            <a href="rules.html#general">General Rules</a><br>
+            <a href="rules.html#pvp">PvP Rules</a><br>
+            <a href="rules.html#gear">Gear Rules</a><br>
+            <a href="rules.html#hunting">Hunting Rules</a><br>
+            <a href="rules.html#generalwar">General War Rules</a><br>
+            <a href="rules.html#civilwar">Civil War Rules</a><br>
+            <a href="rules.html#expansion">Expansion Rules</a><br>
+            <a href="rules.html#discord">Discord Rules</a><br>
+	</div>
+        <!--<aside>
             <div class="aside-content">
                 
             </div>
@@ -108,7 +119,7 @@
             <a href="rules.html#civilwar">Civil War Rules</a><br>
             <a href="rules.html#expansion">Expansion Rules</a><br>
             <a href="rules.html#discord">Discord Rules</a><br>
-        </aside>
+        </aside>-->
                 <h1 id="head">
                     Rules
                 </h1>
