added id="rules" to the sidenav parts

--- a/rules.html
+++ b/rules.html
@@ -96,15 +96,15 @@
         </header>
         <main>
 	<div id="Sidenav" class="Sidenav">
-	    <a href="rules.html#explanation">Explanation</a><br>
-            <a href="rules.html#general">General Rules</a><br>
-            <a href="rules.html#pvp">PvP Rules</a><br>
-            <a href="rules.html#gear">Gear Rules</a><br>
-            <a href="rules.html#hunting">Hunting Rules</a><br>
-            <a href="rules.html#generalwar">General War Rules</a><br>
-            <a href="rules.html#civilwar">Civil War Rules</a><br>
-            <a href="rules.html#expansion">Expansion Rules</a><br>
-            <a href="rules.html#discord">Discord Rules</a><br>
+	    <a href="rules.html#explanation" id="rules">Explanation</a><br>
+            <a href="rules.html#general" id="rules">General Rules</a><br>
+            <a href="rules.html#pvp" id="rules">PvP Rules</a><br>
+            <a href="rules.html#gear" id="rules">Gear Rules</a><br>
+            <a href="rules.html#hunting" id="rules">Hunting Rules</a><br>
+            <a href="rules.html#generalwar" id="rules">General War Rules</a><br>
+            <a href="rules.html#civilwar" id="rules">Civil War Rules</a><br>
+            <a href="rules.html#expansion" id="rules">Expansion Rules</a><br>
+            <a href="rules.html#discord" id="rules">Discord Rules</a><br>
 	</div>
         <!--<aside>
             <div class="aside-content">
