changed the ids of the hover buttons according to css

--- a/rules.html
+++ b/rules.html
@@ -96,15 +96,15 @@
         </header>
         <main>
 	<div id="Sidenav" class="Sidenav">
-	    <a href="rules.html#explanation" id="rules">Explanation</a><br>
-            <a href="rules.html#general" id="rules">General Rules</a><br>
-            <a href="rules.html#pvp" id="rules">PvP Rules</a><br>
-            <a href="rules.html#gear" id="rules">Gear Rules</a><br>
-            <a href="rules.html#hunting" id="rules">Hunting Rules</a><br>
-            <a href="rules.html#generalwar" id="rules">General War Rules</a><br>
-            <a href="rules.html#civilwar" id="rules">Civil War Rules</a><br>
-            <a href="rules.html#expansion" id="rules">Expansion Rules</a><br>
-            <a href="rules.html#discord" id="rules">Discord Rules</a><br>
+	    <a href="rules.html#explanation" id="explanationhover">Explanation</a><br>
+            <a href="rules.html#general" id="generalhover">General Rules</a><br>
+            <a href="rules.html#pvp" id="pvphover">PvP Rules</a><br>
+            <a href="rules.html#gear" id="gearhover">Gear Rules</a><br>
+            <a href="rules.html#hunting" id="huntinghover">Hunting Rules</a><br>
+            <a href="rules.html#generalwar" id="generalwarhover">General War Rules</a><br>
+            <a href="rules.html#civilwar" id="civilwarhover">Civil War Rules</a><br>
+            <a href="rules.html#expansion" id="expansionhover">Expansion Rules</a><br>
+            <a href="rules.html#discord" id="discordhover">Discord Rules</a><br>
 	</div>
         <!--<aside>
             <div class="aside-content">
