changed the class from Sidenav to sidenav
somehow the background color is not updating

--- a/rules.html
+++ b/rules.html
@@ -95,7 +95,7 @@
             <br>
         </header>
         <main>
-	<div id="Sidenav" class="Sidenav">
+	<div id="Sidenav" class="sidenav">
 	    <a href="rules.html#explanation" id="explanationhover">Explanation</a><br>
             <a href="rules.html#general" id="generalhover">General Rules</a><br>
             <a href="rules.html#pvp" id="pvphover">PvP Rules</a><br>
