surrounded the sidenav with aside

--- a/rules.html
+++ b/rules.html
@@ -95,6 +95,7 @@
             <br>
         </header>
         <main>
+	<aside>
 	<div id="Sidenav" class="sidenav">
 	    <a href="rules.html#explanation" id="explanationhover">Explanation</a><br>
             <a href="rules.html#general" id="generalhover">General Rules</a><br>
@@ -106,6 +107,7 @@
             <a href="rules.html#expansion" id="expansionhover">Expansion Rules</a><br>
             <a href="rules.html#discord" id="discordhover">Discord Rules</a><br>
 	</div>
+	</aside>
         <!--<aside>
             <div class="aside-content">
                 
