--- a/claiming.html
+++ b/claiming.html
@@ -102,6 +102,9 @@ and open the template in the editor.
         <div class="block"> <!-- Claiming File & Claiming Map-->
             <div class="inline">
                 <h4 class="headlinearticles">Claiming File</h4>
+		    <a href="BuildList.xlsx" download>
+			<button class="Download button"> Download </a>
+		    </a>
                 <!-- here i plan a download button for the claiming file -->
             </div>
             <div class="inline">
