fixed download button

--- a/claiming.html
+++ b/claiming.html
@@ -103,7 +103,7 @@ and open the template in the editor.
             <div class="inline">
                 <h4 class="headlinearticles">Claiming File</h4>
 		    <a href="BuildList.xlsx" download>
-			<button class="Download button"> Download </a>
+			<button class="downloadbutton"> Download Build List </a>
 		    </a>
                 <!-- here i plan a download button for the claiming file -->
             </div>
