added a discord thingy as aside
i hope this works xD

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@ and open the template in the editor.
             <br>
         </header>
     <main>
+	<aside>
+		<iframe src="https://discordapp.com/widget?id=342028079004254209&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+	</aside>
         <div class="block">
             <h3 class="title-block">
             Home Page
