--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ and open the template in the editor.
         </header>
     <main>
 	<aside>
-		<iframe src="https://discordapp.com/widget?id=342028079004254209&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+		<iframe src="https://discordapp.com/widget?id=342028079004254209&theme=dark" width="50%" height="50%" allowtransparency="true" frameborder="0"></iframe>
 	</aside>
         <div class="block">
             <h3 class="title-block">
