readded the discord thing outside of an aside for astetics

--- a/index.html
+++ b/index.html
@@ -100,9 +100,6 @@ and open the template in the editor.
             <br>
         </header>
     <main>
-	<aside>
-		<iframe src="https://discordapp.com/widget?id=342028079004254209&theme=dark" width="50%" height="50%" allowtransparency="true" frameborder="0"></iframe>
-	</aside>
         <div class="block">
             <h3 class="title-block">
             Home Page
@@ -113,7 +110,11 @@ and open the template in the editor.
             We wish you good health in those dire times and hope to see you again.
             <br>
             </p>
-        </div>
+	    <p>
+		<h3 class="title-block"> Discord </h3>
+		<iframe src="https://discordapp.com/widget?id=342028079004254209&theme=dark" width="50%" height="50%" allowtransparency="true" frameborder="0"></iframe>
+	    </p>
+	    </div>
     </main>
         <footer>
             <br>
