--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ and open the template in the editor.
             </p>
 	    <p>
 		<h3 class="title-block"> Discord </h3>
-		<iframe src="https://discordapp.com/widget?id=342028079004254209&theme=dark" width="50%" height="50%" allowtransparency="true" frameborder="0"></iframe>
+		<iframe src="https://discord.com/widget?id=668590304487800832&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 	    </p>
 	    </div>
     </main>
