added scroll aside nav, fixed aside position
fixed few aside things, but it have few problems
like last buttons make the scroll content longer for some reasons, and make some weird bugs sometimes.
The div title is bit offset since the aside div addition.

--- a/factions.html
+++ b/factions.html
@@ -96,11 +96,11 @@
         Factions
     </h1>
     <main>
-    <aside>
+    <div id="Sidenav" class="sidenav">
     	<a href="factions.html#avari">Avari</a><br>
         <a href="factions.html#bangad">Bangad Minhiriath</a><br>
         <a href="factions.html#beornings">Beornings</a><br>
-	<a href="factions.html#bree">Bree</a><br>
+	    <a href="factions.html#bree">Bree</a><br>
         <a href="factions.html#dale">Dale</a><br>
         <a href="factions.html#dol_guldur">Dol Guldur</a><br>
         <a href="factions.html#dorwinion">Dorwinion</a><br>
@@ -136,7 +136,7 @@
         <a href="factions.html#wanderer">Wanderer</a><br>
         <a href="factions.html#woodelves">Woodland Realm</a><br>
         <a href="factions.html#woodmen">Woodmen</a><br>
-    </aside>
+    </div>
    <div class="block">
         <article id="avari">
             <h4 class="headlinearticles"> Avari </h4>
