Added the contributors to the page in the impressum
added the two of us (used the same technique as for staff)
and prepaired a section for content contributors
as well as the block div so we keep the continuity of the page

--- a/impressum.html
+++ b/impressum.html
@@ -18,7 +18,8 @@ and open the template in the editor.
             <h1>Impressum</h1>
             <br>
         </header>
-        <main id="impressum">   
+        <main id="impressum">
+        <div class"block">
         <h4>Ardas Legends</h4>
             <p>
                 A Lord of the Rings Minecraft Server<br>
@@ -27,8 +28,23 @@ and open the template in the editor.
                 <a href="https://ardas-legends.fandom.com/">Fandom Wiki</a><br>
                 <a href="https://github.com/AnedhelAulendur/ArdasLegendsPlugin">Custom Plugin</a><br>
                 <a href="https://lotrminecraftmod.fandom.com/wiki/Updates#Update_36_--_The_Final_1.7.10_Update_.28June_12.2C_2020.29">Lord of the Rings Mod by Mevans</a><br>
-            </p>    
+            </p>
+            <div> <!-- Contributors: Code -->
+                <h4>Contributors to the code:</h4>
+                <div class="inline">
+                    <img src="https://cravatar.eu/head/Anedhel" title="Anedhel">
+                    <p class="staff_names" style="margin-top: 0px;">Anedhel</p>
+                </div>
+                <div class="inline">
+                    <img src="https://cravatar.eu/head/Jukoz" title="Jukoz">
+                    <p class="staff_names" style="margin-top: 0px;">Jukoz</p>
+                </div>
+            </div>
+            <div> <!-- Contributors: Content -->
+                <h4 style="margin-bottom: 25px;">Content</h4>
+            </div>            
             <br>
+            </div>
         </main>
         <footer>
             <br>
