Changed the impressum title from black to white

--- a/impressum.html
+++ b/impressum.html
@@ -15,7 +15,7 @@ and open the template in the editor.
     <body>
         <header>
             <br>
-            <h1>Impressum</h1>
+            <h1 style="color:white">Impressum</h1>
             <br>
         </header>
         <main id="impressum">
