Changed the text on the main page
added a . and <br>

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ and open the template in the editor.
             Home Page
             </h3>
             <p class="block-text">
-            Welcome to the Ardas Legends Wiki
+            Welcome to the Ardas Legends Wiki. <br>
             Currently we are still putting a lot of work into this wiki to ensure it is nice and lovely to look at.
             We wish you good health in those dire times and hope to see you again.
             <br>
