Added the titan embed
might be nicer than the discord thingy

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ and open the template in the editor.
             </p>
 	    <p>
 		<h3 class="title-block"> Discord </h3>
-		<iframe src="https://discord.com/widget?id=668590304487800832&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+		<iframe src="https://titanembeds.com/embed/668590304487800832" height="600" width="800" frameborder="0"></iframe>
 	    </p>
 	    </div>
     </main>
