--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ and open the template in the editor.
             </p>
 	    <p>
 		<h3 class="title-block"> Discord </h3>
-		<iframe src="https://titanembeds.com/embed/668590304487800832" height="600" width="800" frameborder="0"></iframe>
+		<iframe src="https://titanembeds.com/embed/668590304487800832?defaultchannel=673971118255767567" height="600" width="800" frameborder="0"></iframe>
 	    </p>
 	    </div>
     </main>
