Article update, feel free to add content
What I added in css (I modified a bit the faction.html ofc classes/id/div): 

.artcl-container{
    width: 95%;
    height: 500px;
    margin: auto;
    padding: 10px;
}
.artcl-left {
    margin-left: 5%;
    margin-top: 3%;
    width: 55%;
    float: left;
    font-size: 24px;
}
.artcl-right {
    width: 30%;
    height: auto;
    float: right;
    margin: 0;
    background-color: rgba(255, 255, 255, 0.2);
}
.infos {
    width: 100%;
    float: left; 
}
.infos p {
    float: left;
    margin-left: 15px;
    margin-top: 10px;
}

--- a/factions.html
+++ b/factions.html
@@ -149,22 +149,37 @@
         </p>
         <article id="bangad">
             <h4 class="headlinearticles"> Bangad Minhiriath </h4>
-            <p>
-                "Bangad-Minhiriath are the true traders of Middle-Earth.<br>
-		Translating to "Traders Between the Seas", the merchants live as a neutral faction and travel out from their capital of Esgaroth<br>
-		and explore the lands trading with all races.<br>
-		The city of Sammar Erui is also under the watch of Merchant-King Glupe.<br>
-		If you're looking to make some money and a name for yourself join Bangad-Minhiriath today!" - glupe1, Founder and Faction Leader of Bangad Minhiriath<br>
-            </p>
+            <div class="artcl-container">
+                <div class="artcl-left">
+                    <p>
+                    "Bangad-Minhiriath are the true traders of Middle-Earth.<br>
+                    Translating to "Traders Between the Seas", the merchants live as a neutral faction and travel out from their capital of Esgaroth<br>
+                    and explore the lands trading with all races.<br>
+                    The city of Sammar Erui is also under the watch of Merchant-King Glupe.<br>
+                    If you're looking to make some money and a name for yourself join Bangad-Minhiriath today!" - glupe1, Founder and Faction Leader of Bangad Minhiriath<br>
+                </p> 
+                </div>
+                <div class="artcl-right">
+                    <p style="font-weight: bold;">Bangad-Minhiriath</p>
+                    <div class="infos">
+                        <img src="img/slide1.png" style="height: 180px; width: 100%;">
+                        <p style="margin-top: 5px;">Informations</p> 
+                    </div>
+                    <div>
+                        <p style="font-style: italic;">King : Glupe (glupe1)</p>  
+                    </div>
+                    <div>
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/d/da/Bree-land_Banner.png/revision/latest?cb=20200612225741&format=original">
+                    </div>
+                    <p>...</p>    
+                </div>
+            </div> 
         </article>
         <p class="between">
             <br>
         </p>
-        <article id="beornings">
-            <h4 class="headlinearticles"> Beornings </h4>
-            <p>
-                Beornings
-            </p>
+        <article id="bangad">
+            <h4 class="headlinearticles"> Beorningsso </h4>
         </article>
         <p class="between">
             <br>
