--- a/staff.html
+++ b/staff.html
@@ -112,6 +112,11 @@ and open the template in the editor.
                 <img src="https://cravatar.eu/head/Anedhel" title="Anedhel">
                 <p class="staff_names" style="margin-top: 0px;">Anedhel</p>
             </div>
+	    <div class="inline">
+		<h4 style="margin-top: 0px;">Developer</h4>
+                <img src="https://cravatar.eu/head/Jukoz" title="Jukoz">
+                <p class="staff_names" style="margin-top: 0px;">Jukoz</p>
+            </div>
         </div>
         <div> <!-- Admins -->
             <h4 style="margin-bottom: 25px;">Admins</h4>
@@ -127,20 +132,16 @@ and open the template in the editor.
                 <img src="https://cravatar.eu/head/20damian07" title="Daim">
                 <p class="staff_names" style="margin-top: 0px;">Daim (20damian07)</p>
             </div>
+	    <div class="inline">
+                <img src="https://cravatar.eu/head/glupe1" title="Glupe">
+                <p class="staff_names" style="margin-top: 0px;">Glupe (glupe1)</p>
+            </div>
         </div>
         <div> <!-- Mods -->
             <h4 style="margin-bottom: 25px;">Mods</h4>
             <div class="inline">
                 <img src="https://cravatar.eu/head/Pokerino" title="Pokerino">
                 <p class="staff_names" style="margin-top: 0px;">Pokerino</p>
-            </div>
-            <div class="inline">
-                <img src="https://cravatar.eu/head/glupe1" title="Glupe">
-                <p class="staff_names" style="margin-top: 0px;">Glupe (glupe1)</p>
-            </div>
-            <div class="inline">
-                <img src="https://cravatar.eu/head/Jukoz" title="Jukoz">
-                <p class="staff_names" style="margin-top: 0px;">Jukoz</p>
             </div>
         </div>
         <div> <!-- Retired -->
